# up

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  .pre-commit-config.yaml  Containerfile  Dockerfile  FAQ.md  Makefile  README.md  TODO.txt  build.sh  build_libs.sh  bump_patch.sh  clean.sh  index.ts  install_all.sh  jbang-catalog.json  main.java  package-lock.json  package.json  package.sh  pom.xml  publish_libs.sh  run.sh  tag.sh  uprun.sh
.github/workflows/: build.yml  on-push-test.yml  on-tag-publish.yml
archive/: .gitpod.Dockerfile  TODO.txt  build.sh  jbang-catalog.json  pyproject.toml
archive/demos/99_wishlist/: up_module_provider.sh
archive/src/main/docker/: Dockerfile.jvm  Dockerfile.legacy-jar
archive/src/main/java/up/: Main.java  Up.java
archive/src/main/java/up/doclet/: AssertDoclet.java  DocletProcessor.java
archive/src/main/java/up/producer/: VMContextProducer.java
archive/up_ansible/tests/: test_up_ansible.py
archive/up_ansible/up_ansible/: __init__.py
archive/up_cli/: rerun.sh
archive/up_cli/src/up_cli/: main.py
archive/up_images/up_rh/: Containerfile
archive/up_lib/: pyproject.toml  rerun.sh
archive/up_lib/src/up_lib/: commands.py  log.py  lookups.py  parser.py  utils.py
archive/up_lib/src/up_lib/action/: install.py  template.py  vars.py  wait.py
archive/up_lib/tests/: conftest.py  test_lookups.py  test_main.py
demos/: 000_wait_hello_world.sh  010_wait_atMost.sh  10_simple_prompts.sh  15_up_with_docklets_run.sh  15_up_with_doclets.sh  20_plugins.sh
demos/05_wait/: 010_wait_atMost.sh  05_wait_fibo.sh  20_aws_nuke.sh
demos/10_template/: install-config.sample.env.yaml
demos/10_wait/: 100_wait_fibo.sh  10_wait_hello_world.sh  99_wait_container.sh
demos/20_env/: 00_env_check.sh
demos/40_install/: 10_aws_nuke.sh  10_openshift.sh  99_implicit_install.sh
demos/99_wishlist/: oci_upi_ocp.sh
scripts/aws-nuke/: aws-nuke.qute.yaml  main.sh
scripts/hello-sh/: main.sh
src/main/docker/: Dockerfile.jvm  Dockerfile.legacy-jar  Dockerfile.native  Dockerfile.native-micro
src/main/java/: main.java
src/main/java/caravanacloud/: ContextProvider.java  GreetingCommand.java  MainCommand.java
src/main/java/up/: ContextProvider.java  Doclet.java  Parser.java  Up.java
src/main/java/up/doclet/: AssertDoclet.java  Doclet.java
src/main/java/up/parser/: Parser.java
src/main/java/up/producer/: LoggerProducer.java
src/main/java/upcli/: GreetingCommand.java
src/test/java/up/: ParserTest.java
test/up-cli-java/: README.md  pom.xml
test/up-cli-java/src/main/java/org/acme/: GreetingCommand.java
test/up-cli-py/: pyproject.toml
up/: Up.java
up_ansible/: pyproject.toml
up_ansible/up_ansible/: __init__.py  containers_for_prompt.py  image_for_prompt.py  run_for_prompt.py
up_aws/: Containerfile  pyproject.toml
up_aws/opt/aws_utils/: README.md  pyproject.toml
up_aws/opt/aws_utils/aws_utils/: subs.py
up_aws/up_aws/: __init__.py  containers_for_prompt.py
up_cli/: pyproject.toml  rerun.sh  setup.py
up_cli/demos/: 10_simple_prompt.sh  20_prompt_substitution.sh
up_cli/src/up_cli/: __init__.py  containers.py  hookspec.py  main.py  plugins.py
up_cli/src/up_cli/defaults/: image_for_prompt.py
up_cli/tests/: test_up_cli.py
up_cli/up/: cli.py  main.py
up_demo/: pyproject.toml
up_demo/up_demo/: __init__.py  containers_for_prompt.py
up_images/up_rh/: Containerfile
up_lib/: pyproject.toml  rerun.sh
up_lib/src/up_lib/: __init__.py  action.py  action_install.py  action_template.py  action_wait.py  actions.py  command.py  errors.py  fibo.py  loader.py  log.py  main.py  parser.py  up_init.py  up_lib.py  utils.py  wait.py
up_lib/src/up_lib/action/: install.py  template.py  vars.py  wait.py
up_lib/src/up_lib/cmd/: fibo.py
up_lib/src/up_lib/lookup/: ssh_key.py  ssh_key.sh
up_lib/tests/: test_action_wait.py  test_fibo.py  test_main.py  test_parser.py  test_wait.py
up_lib/up_lib/: __init__.py  containers.py  hookspec.py  match.py  plugins.py  up_lib.py
up_openshift/: pyproject.toml
up_quarkus/: pyproject.toml  settings.yaml  up_quarkus.yaml
up_splat/: Containerfile  pyproject.toml  setup.py
up_splat/up_splat/: __init__.py  containers_for_prompt.py  image_for_prompt.py  run_for_prompt.py  substitutions_for_prompt.py  up.yaml
up_splat/up_splat/splat/create/cluster/oci-standard/: main.sh  up.yaml
upcli/: ansible_version.sh  fedora_version.sh  pyproject.toml  run.sh
upcli/up/: __init__.py  __main__.py  __version__.py  commands.py  help_texts.py  main.py  options.py  utils.py
uplib/: pyproject.toml
uplib/tests/: test_up_lib.py
uplib/uplib/: __init__.py  config.py  containers.py  hookspecs.py  logging.py  main.py  match.py  parser.py  plugins.py  up.yaml
