[tool.poetry]
name = "up-tools"
version = "0.1.0"
description = ""
authors = ["Julio Faerman <jufaerma@redhat.com>"]
readme = "README.md"
packages = [{include = "up_tools"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
