[tool.poetry]
name = "up-ansible"
version = "0.2.1"
description = ""
authors = ["Julio Faerman <jufaerma@redhat.com>"]
readme = "README.md"

[project]
name = "up-ansible"

[tool.poetry.dependencies]
python = "^3.12"
pluggy = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
