[tool.poetry]
name = "up-ansible"
version = "0.2.17"
description = ""
authors = ["Julio Faerman <jufaerma@redhat.com>"]
readme = "README.md"

[project]
name = "up-ansible"

[tool.poetry.dependencies]
python = "^3.12"
up-lib = "0.2.17"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
