[tool.poetry]
name = "up-ansible"
version = "0.2.19"
description = ""
authors = ["Julio Faerman <jufaerma@redhat.com>"]
readme = "README.md"

[project]
name = "up-ansible"

[tool.poetry.dependencies]
python = "^3.12"
uplib = "^0.2.19"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
