[tool.poetry]
name = "up"
version = "0.1.0"
description = ""
authors = ["Julio Faerman <jufaerma@redhat.com>"]
readme = "README.md"
packages = [
    { include = "up_cli", from="./src/"},
    { include = "up_splat", from="../up_splat"}
]

[tool.poetry.dependencies]
python = "^3.11"
pluggy = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
up = 'up_cli.main:main'