[tool.poetry]
name = "up"
version = "0.2.1"
description = ""
authors = ["Julio Faerman <jufaerma@redhat.com>"]
readme = "README.md"
packages = [
    { include = "up_cli", from="./src/"}
]

[tool.poetry.dependencies]
python = "^3.12"
pluggy = "^1.3.0"
docker = "^6.1.3"
up-ansible = "^0.2.1"
up-splat = "^0.2.1"
dynaconf = {extras = ["all"], version = "^3.2.3"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
up = 'up_cli.main:main'