[tool.poetry]
name = "up_lib"
version = "0.1.333"
description = ""
authors = ["Julio Faerman <jufaerma@redhat.com>"]
packages = [
    { include = "up_lib", from="./src" }
]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
