[tool.poetry]
name = "up-lib"
version = "0.2.1"
description = ""
authors = ["Julio Faerman <356476+faermanj@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"
