[tool.poetry]
name = "up-lib"
version = "0.2.17"
description = ""
authors = ["Julio Faerman <356476+faermanj@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.12"
pluggy = "^1.3.0"
docker = "^6.1.3"
dynaconf = {extras = ["all"], version = "^3.2.3"}


[tool.poetry.dev-dependencies]
pytest = "^6.2"

[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"
