[tool.poetry]
name = "up-splat"
version = "0.1.0"
description = ""
authors = ["Julio Faerman <jufaerma@redhat.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pluggy = "^1.3.0"


# [build-system]
# requires = ["poetry-core"]
# build-backend = "poetry.core.masonry.api"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "up_splat"

[project.entry-points.pytest11]
up = "up.pluginmodule"