[tool.poetry]
name = "up-splat"
version = "0.2.17"
description = ""
authors = ["Julio Faerman <jufaerma@redhat.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pluggy = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[project]
name = "up-splat"

[project.entry-points.pytest11]
up = "0.2.6"
