[tool.poetry]
name = "up"
version = "0.2.19"
description = ""
authors = ["Julio Faerman <jufaerma@redhat.com>"]
readme = "README.md"
#packages = [
#    { include = "up_cli", from="./up_cli/"}
#]

[tool.poetry.dependencies]
python = "^3.12"
uplib = "^0.2.19"
up-splat = "0.2.19"
up-ansible = "0.2.19"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
up = "up.main:main"