[tool.poetry]
name = "up"
version = "0.2.19"
description = "Unified and Pluggable CLI"
authors = ["Julio Faerman <jufaerma@redhat.com>"]
maintainers = ["Julio Faerman <jufaerma@redhat.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/CaravanaCloud/up"
repository = "https://github.com/CaravanaCloud/up"
documentation = "https://github.com/CaravanaCloud/up#documentation"
keywords = ["CLI"]
classifiers = [
  "Intended Audience :: System Administrators",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Topic :: Utilities"
]
#packages = [
#    { include = "up_cli", from="./up_cli/"}
#]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/CaravanaCloud/up/issues"

[tool.poetry.dependencies]
python = "^3.12"
uplib = "^0.2.19"
up-splat = "^0.2.19"
up-ansible = "^0.2.19"
up-aws = "^0.2.19"
up-demo = "^0.2.19"
ruamel-yaml = "^0.18.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
up = "up.main:cli_main"
