[tool.poetry]
name = "aws-utils"
version = "0.1.0"
description = ""
authors = ["Julio Faerman <356476+faermanj@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.29.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
subs = "aws_utils.subs:subs"